Crawling Azure devops repositories (#94)
* first impl for azure devops.. only the basic features are available

* upgrading Kotlin and Gson. sticking Jackson to 2.12.6

* move test files to specific folders

* specific profiles for tests

* move application.yml to test folder, so that it doesn't impact other tests by being loaded by default

* debugging for travisCI

* tasksToPerform should not be static, ie shared

* refactored, introducing AvailableParsersAndTasks to share what can be shared easily and safely


Co-authored-by: Vincent Fuchs <vincent.fuchs@gefa.de>